# fibrotug-improc

./: .gitignore  README.md  act_orientation.FE  actin_processing.py  actin_quant.csv  actin_total_density.csv  analyze_dsp.py  berlin.gpl  check.vtu  dsp_quant.csv  dsp_total_density.csv  elem_fiber_rho.FE  fiber_mesh.vtu  fiber_orientation.FE  fiber_quant.csv  fibers_processing.py  fibers_processing_v2.py  fibrotug-improc.code-workspace  find_transformations.py  fix_cut_videos.py  gen_matrix_connections_cells.py  generate_mesh.py  generate_tissue_mask.py  get_cell_nuclei.py  lines.vtu  make_topologies.py  mesh.msh  plot_all_tissues.py  preview_data.py  process_dsp_exp.py  process_tissue.py  process_video.py  pyproject.toml  quantify_injured.py  register_pre_to_post.py  test_make_cells.py  test_tissue_mask_w_fibers.py  visualize_actin.py
src/: FtugTissue.py  img2mesh.py
src/improcessing/: actin.py  dsp.py  fibers.py  masks.py  nuclei.py
src/imregistration/: ITKTransform.py  utils.py
src/phasegen/: gen_topologies.py
src/vidprocessing/: vidutils.py
test_data/: post_act.tif  post_dsp.tif  post_mask.tif  pre_act.tif  pre_dsp.tif  pre_mask.tif  pre_tissue_mask.tif
test_data/data/: act_angles.FE  act_disp.FE  act_rho.FE  check.vtu  fib_angles.FE  fib_disp.FE  fib_rho.FE  visualize_data.py
test_data/exp/: fibrotug_mask.tif  post_act.tif  post_blob_mask.tif  post_blob_mask_init.tif  post_dsp.tif  post_fib.tif  post_mask.tif  post_myo_mask.tif  post_myo_mask_init.tif  pre_act.tif  pre_blob_mask.tif  pre_blob_mask_init.tif  pre_dsp.tif  pre_mask.tif  pre_myo_mask.tif  (+3 more)
(+45 files in other folders)
